api: bbc1tx -> bbc1digest
